update docker-compose
